trunk/Archive2/d5/277e0b71f3c77d/output
main.cpp: In function 'int main()':
main.cpp:54:3: error: a function-definition is not allowed here before '{' token
   {
   ^
main.cpp:61:4: error: 'outFile' is not a member of 'std'
    std::outFile << v[i];
    ^
main.cpp:28:6: warning: unused variable 'pPower' [-Wunused-variable]
  int pPower; //Holds Player Power
      ^
main.cpp:70:18: warning: ignoring return value of 'int system(const char*)', declared with attribute warn_unused_result [-Wunused-result]
   system("pause");
                  ^
main.cpp:74:17: warning: ignoring return value of 'int system(const char*)', declared with attribute warn_unused_result [-Wunused-result]
  system("pause");
                 ^
